# WinTapLite

./: Cargo.toml  README.md  plan.md
.claude/: settings.local.json
src/: app.rs  main.rs
src/core/: clicker.rs  hotkey.rs  mod.rs  recorder.rs
src/script/: mod.rs  parser.rs  player.rs  storage.rs  types.rs
src/ui/: click_mode.rs  main_window.rs  mod.rs  script_mode.rs
src/utils/: bindings.rs  coordinate.rs  dialog.rs  favorites.rs  mod.rs
